k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: min-k8s-app
  namespace: otus
  labels:
    app: min-k8s-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: min-k8s-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: min-k8s-app
    spec:
      containers:
        - name: min-k8s-app-pod
          image: nikishqua/rest-app:latest
          ports:
            -   containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
