k8s/health-app-deployment.yaml
apiVersion: apps/v1 # до версии 1.9.0 нужно использовать apps/v1beta2
kind: Deployment
metadata:
  name: health-app-deployment
spec:
  selector:
    matchLabels:
      app: HealthApp
  replicas: 2 # запускает 2 пода, созданных по шаблону
  template:
    metadata:
      labels:
        app: HealthApp
    spec:
      containers:
      - name: test-rest-app
        image: nikishqua/rest-app:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
#
