k8s/health-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: health-pod
  namespace: health
  labels:
    app: HealthApp
spec:
  containers:
  - name: test-rest-app
    image: nikishqua/rest-app:latest
    imagePullPolicy: Always
    ports:
       - containerPort: 8000
    livenessProbe:
      httpGet:
        path: /health
        port: 8000
      initialDelaySeconds: 10
      periodSeconds: 10
    readinessProbe:
      httpGet:
        port: 8000
        path: /
      initialDelaySeconds: 10
      periodSeconds: 5

        #protocol: TCP
    #resources:
      #limits:
        #memory: "200Mi"
      #requests:
        #memory: "100Mi"
    #command: ["stress"]
    #args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]
