k8s/health-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-app-service
spec:
  selector:
    app: HealthApp
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
